microservices/k8s/namespace.yaml
# Eigen namespace zodat alles van mooindagcounter bij elkaar staat
# en met 1 commando op te ruimen is: kubectl delete namespace mooindagcounter
apiVersion: v1
kind: Namespace
metadata:
  name: mooindagcounter
